--- a/script.html
+++ b/script.html
@@ -321,6 +321,18 @@
         showticklabels:false
       };        
       
+      var axisMarkers =   {
+        x: [-0.25,10.75],
+        y: [10.75,-0.25],
+        mode: 'text',
+        text:["y","x"],
+        textposition:["left","bottom"],
+        textfont: {
+          size:18,
+        },
+        hoverinfo:'none'
+      };
+
       // make grid smaller for mobile
       var gridsize;
       var indent;
@@ -413,7 +425,7 @@
 
      ];
       
-      var data = [trace1,trace2,xTickMarkLabels,yTickMarkLabels];
+      var data = [trace1,trace2,xTickMarkLabels,yTickMarkLabels,axisMarkers];
       Plotly.newPlot('plot', data, layout,{displayModeBar: false});
     }
     catch (err) {
