Added rewriting exponential functions

--- a/main.html
+++ b/main.html
@@ -31,6 +31,7 @@
             <option value=2>Given table, write equation</option>
             <option value=3>Given graph, find growth or decay factor</option>
             <option value=4>Given graph, write equation</option>
+            <option value=5>Rewrite exponential functions</option>
          </select><input type="button" value="Generate" id="generate" class="btn btn-main">
            <div id="generated"></div>   
        <br>
